--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,34 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+@import './colors';
+
+
+.welcome {
+  display: block;
+  margin: auto;
+  width: 100%;
+}
+
+body {
+  background-color: $blue-gray;
+  color: $lighter-pond-green;
+}
+
+h1 {
+  color: $lighter-pond-green;
+  text-align: center;
+}
+
+.container {
+  border-color: $lighter-pond-green;
+  border-radius: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  & img {
+    margin: auto;
+    max-height: 150px;
+    max-width: auto;
+    padding: 30px;
+  }
+}
