Small CSS tweak
changed one css style

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -46,6 +46,7 @@ button {
   page-break-after: always;
   page-break-before: always;
   text-align: center;
+  vertical-align: middle;
   width: 35%;
 
 
